--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -10,11 +10,11 @@
         android:id="@+id/tvCadastrarAlunoCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:text="Cadastrar Aluno"
         android:textSize="34sp"
-        android:textStyle="bold"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#330B09"
+        android:backgroundTint="@color/verde_500"
         android:ems="10"
         android:hint="Nome"
         android:inputType="textPersonName"
@@ -41,7 +41,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#3A0909"
+        android:backgroundTint="@color/verde_500"
         android:ems="10"
         android:hint="Matrícula"
         android:inputType="textPersonName"
@@ -56,7 +56,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
+        android:backgroundTint="@color/verde_500"
         android:ems="10"
         android:hint="Telefone"
         android:inputType="phone"
@@ -65,11 +65,12 @@
         app:layout_constraintTop_toBottomOf="@+id/etEmailCadastroAluno" />
 
     <CheckBox
-        android:id="@+id/cbBolsaCadastroAluno"
+        android:id="@+id/cbCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:buttonTint="@color/teal_700"
         android:text="Recebe bolsa da Assistência Estudantil?"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEtniaCadastroAluno" />
@@ -79,9 +80,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
+        android:backgroundTint="@color/verde_500"
         android:ems="10"
         android:hint="Etnia ou Raça"
         android:inputType="textPersonName"
@@ -96,7 +97,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
+        android:backgroundTint="@color/verde_500"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
