--- a/app/src/main/res/layout/activity_cadastro_evento.xml
+++ b/app/src/main/res/layout/activity_cadastro_evento.xml
@@ -7,11 +7,11 @@
     tools:context=".CadastroEventoActivity">
 
     <TextView
-        android:id="@+id/tvCadastrarEventoCadastroEvento"
+        android:id="@+id/tvCadastrarEvento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="sans-serif"
         android:text="Cadastrar Evento"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +23,7 @@
         android:id="@+id/etDataCadastroEvento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Data"
         android:inputType="date"
@@ -80,6 +81,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCadastrarEventoCadastroEvento" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCadastrarEvento" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
