--- a/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. "
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent orci velit, lacinia vitae eleifend a, placerat quis sapien. Mauris nulla tellus, tincidunt non malesuada id, auctor vitae turpis. Proin eu libero non elit hendrerit tincidunt non non ante. Phasellus lobortis suscipit mauris, eget pellentesque mauris euismod et. Cras euismod nisi vitae turpis eleifend laoreet. Donec vitae arcu sed ligula pulvinar suscipit ac eget augue. Vestibulum iaculis dignissim lacinia. Praesent scelerisque sem risus, nec dignissim ex commodo in.  "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etHistoricoAlunoCadastroItem" />
