--- a/app/src/main/res/layout/activity_cadastro_noticia.xml
+++ b/app/src/main/res/layout/activity_cadastro_noticia.xml
@@ -21,6 +21,7 @@
         android:id="@+id/etTipoEventoCadastroNoticia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Tipo de Noticia"
         android:inputType="textPersonName"
@@ -32,6 +33,7 @@
         android:id="@+id/etDataCadastroNoticia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Data"
         android:inputType="date"
