--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -7,7 +7,7 @@
     tools:context=".CadastroAlunoActivity">
 
     <TextView
-        android:id="@+id/tvCadastroAluno"
+        android:id="@+id/tvCadastrarAlunoCadastroAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etNome"
+        android:id="@+id/etNomeCadastrarAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -31,10 +31,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCadastroAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCadastrarAlunoCadastroAluno" />
 
     <EditText
-        android:id="@+id/mtMatricula"
+        android:id="@+id/etMatriculaCadastrarAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -46,10 +46,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNome" />
+        app:layout_constraintTop_toBottomOf="@+id/etNomeCadastrarAluno" />
 
     <EditText
-        android:id="@+id/etPhoneAluno"
+        android:id="@+id/etPhoneCadastrarAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -61,20 +61,20 @@
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/etEmailCadastrarAluno" />
 
     <CheckBox
-        android:id="@+id/cbBolsa"
+        android:id="@+id/cbBolsaCadastrarAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Recebe bolsa da Assistência Estudantil?"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEtnia" />
+        app:layout_constraintTop_toBottomOf="@+id/etEtniaCadastrarAluno" />
 
     <EditText
-        android:id="@+id/etEtnia"
+        android:id="@+id/etEtniaCadastrarAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -86,10 +86,10 @@
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPhoneAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/etPhoneCadastrarAluno" />
 
     <EditText
-        android:id="@+id/etEmailAluno"
+        android:id="@+id/etEmailCadastrarAluno"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -101,6 +101,6 @@
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mtMatricula" />
+        app:layout_constraintTop_toBottomOf="@+id/etMatriculaCadastrarAluno" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
