--- a/app/src/main/res/layout/activity_cadastro_evento.xml
+++ b/app/src/main/res/layout/activity_cadastro_evento.xml
@@ -31,17 +31,6 @@
         app:layout_constraintTop_toBottomOf="@+id/tvCadastrarEvento" />
 
     <EditText
-        android:id="@+id/eTParaQuemCadastroEvento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="NÃO SABEMOS"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDataCadastroEvento" />
-
-    <EditText
         android:id="@+id/etDataCadastroEvento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,10 +51,10 @@
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eTParaQuemCadastroEvento" />
+        app:layout_constraintTop_toBottomOf="@+id/spParaQuemCadastrarEvento" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/bttCadastrarEvento"
+        android:id="@+id/btnCadastrarEvento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -79,5 +68,13 @@
         app:layout_constraintTop_toBottomOf="@+id/etDescricaoEvento"
         app:layout_constraintVertical_bias="0.969"
         app:srcCompat="@drawable/ic_baseline_add_24" />
+
+    <Spinner
+        android:id="@+id/spParaQuemCadastrarEvento"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etDataCadastroEvento" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
