--- a/app/src/main/res/layout/aluno_item_list.xml
+++ b/app/src/main/res/layout/aluno_item_list.xml
@@ -9,7 +9,10 @@
         android:id="@+id/tvNomeAlunoItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Roberto Silva Rodrigues"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,8 +23,9 @@
         android:id="@+id/tvMatriculaAlunoItem"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Matrícula: 195339394"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNomeAlunoItem" />
