--- a/app/src/main/res/layout/activity_cadastro_evento.xml
+++ b/app/src/main/res/layout/activity_cadastro_evento.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastroEventoActivity">
+    tools:context=".activity.CadastroEventoActivity">
 
     <TextView
         android:id="@+id/tvCadastrarEvento"
