--- a/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastroItemHistoricoAlunoActivity">
+    tools:context=".activity.CadastroItemHistoricoAlunoActivity">
 
     <TextView
         android:id="@+id/etHistoricoAlunoCadastroItem"
