--- a/app/src/main/res/layout/activity_cadastro_noticia.xml
+++ b/app/src/main/res/layout/activity_cadastro_noticia.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastroNoticiaActivity">
+    tools:context=".activity.CadastroNoticiaActivity">
 
     <TextView
         android:id="@+id/tvCadastrarNoticia"
