--- a/app/src/main/res/layout/activity_detalhe_historico_item_aluno.xml
+++ b/app/src/main/res/layout/activity_detalhe_historico_item_aluno.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetalheHistoricoItemAlunoActivity">
+    tools:context=".activity.DetalheHistoricoItemAlunoActivity">
 
     <TextView
         android:id="@+id/etHistoricoDetalheHistoricoAluno"
