--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".activity.HomeActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
@@ -19,6 +19,7 @@
         app:menu="@menu/home_bnv_menu" />
 
     <FrameLayout
+        android:id="@+id/flHome"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
