--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -103,4 +103,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etMatriculaCadastrarAluno" />
 
+    <Button
+        android:id="@+id/btnCadastrarAluno"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="60dp"
+        android:text="Cadastrar Aluno"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cbBolsaCadastrarAluno" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
