novas atualizções 25/11 de 2022

--- a/app/src/main/res/layout/activity_cadastro_evento.xml
+++ b/app/src/main/res/layout/activity_cadastro_evento.xml
@@ -50,31 +50,29 @@
         android:hint="Descrição do Evento"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spParaQuemCadastrarEvento" />
+        app:layout_constraintTop_toBottomOf="@+id/etDataCadastroEvento" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <CheckBox
+        android:id="@+id/cbPublicoCadastroEvento"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:text="Público"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etDescricaoEvento" />
+
+    <Button
         android:id="@+id/btnCadastrarEvento"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:clickable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDescricaoEvento"
-        app:layout_constraintVertical_bias="0.969"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
-
-    <Spinner
-        android:id="@+id/spParaQuemCadastrarEvento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="190dp"
+        android:text="Cadastrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDataCadastroEvento" />
+        app:layout_constraintTop_toBottomOf="@+id/cbPublicoCadastroEvento" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
