--- a/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_item_historico_aluno.xml
@@ -40,4 +40,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etDescricaoCadastroItem" />
+
+    <Button
+        android:id="@+id/btnCadastrarHistorico"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="279dp"
+        android:layout_marginBottom="70dp"
+        android:text="Cadastrar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etDetalheCadastroItem" />
 </androidx.constraintlayout.widget.ConstraintLayout>
