--- a/app/src/main/res/layout/activity_cadastro_aluno.xml
+++ b/app/src/main/res/layout/activity_cadastro_aluno.xml
@@ -23,7 +23,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="70dp"
         android:layout_marginEnd="8dp"
         android:backgroundTint="#330B09"
         android:ems="10"
@@ -48,60 +48,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNomeCadastrarAluno" />
 
-    <EditText
-        android:id="@+id/etPhoneCadastrarAluno"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
-        android:ems="10"
-        android:hint="Telefone"
-        android:inputType="phone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEmailCadastrarAluno" />
-
     <CheckBox
         android:id="@+id/cbBolsaCadastrarAluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
         android:text="Recebe bolsa da Assistência Estudantil?"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEtniaCadastrarAluno" />
-
-    <EditText
-        android:id="@+id/etEtniaCadastrarAluno"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
-        android:ems="10"
-        android:hint="Etnia ou Raça"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etPhoneCadastrarAluno" />
-
-    <EditText
-        android:id="@+id/etEmailCadastrarAluno"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="#330909"
-        android:ems="10"
-        android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etMatriculaCadastrarAluno" />
+        app:layout_constraintTop_toBottomOf="@+id/spRendaCadastroAluno" />
 
     <Button
         android:id="@+id/btnCadastrarAluno"
@@ -114,5 +71,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cbBolsaCadastrarAluno" />
+
+    <Spinner
+        android:id="@+id/spRendaCadastroAluno"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="60dp"
+        android:entries="@array/renda_array"
+        app:layout_constraintBottom_toTopOf="@+id/cbBolsaCadastrarAluno"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spEtniaCadastroAluno" />
+
+    <Spinner
+        android:id="@+id/spEtniaCadastroAluno"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:entries="@array/etnia_array"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etMatriculaCadastrarAluno" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
